# registrar-reports

./: .env.example  .envrc  .gitignore  Impressions.xlsx  README.md  ce_descriptions.txt  devbox.json  main.ipynb  main.py  parser.py  pyproject.toml  raw_descriptor_stats.txt  requirements.txt  shell.nix  test_parser.py  username_mapping.csv  usernames.csv
descriptor_parser/artefacts/: cleaned_descriptor_stats.txt  raw_descriptors.txt
descriptor_parser/input/: ExamDataForTubo_202109.csv  ExamDataForTubo_202109_2.csv  ExamDataForTubo_202201.csv  ExamDataForTubo_202201_2.csv
descriptor_parser/output/: ExamDataParsed_.csv  ExamDataParsed_202109.csv  ExamDataParsed_202109_2.csv  ExamDataParsed_202201.csv  ExamDataParsed_20220119.csv  individuals_202108.csv
descriptor_parser/src/: parser.py
descriptor_parser/src/tests/: test_simple.py
impression_crawler/output/: 20220201-20220522.html  20220201-20220522.pkl  20220201-20220522.txt
impression_crawler/src/: main.py
notebooks/: descriptor_parser.ipynb  impression_summary.ipynb
registrar_reports/: __init__.py
registrar_reports/src/: classifications.yaml  impression_analysis.py  impression_crawler.py  parts_parser.py
registrar_reports/tests/: table.html  test_crawler.py  test_parser.py
src/: classifications.yaml  impression_crawler.py  parser.py  parts_parser.py  username_mapping.csv
src/tests/: test_parser.py
tests/: test_parser.py
